# outpost

./: README.md
agent/: Cargo.toml  README.md
agent/src/: api.rs  job_processor.rs  main.rs  progress.rs  queue.rs  worker.rs
bruno/: Get current user.bru
bruno/Agents/: Create new agent token.bru  Create new agent.bru  Get agents.bru
bruno/Bilbo/: Update Job Output.bru  Update output.bru  bruno.json
bruno/PipelineJobs/: Get next job.bru  Update job.bru
bruno/environments/: Local.bru
src/: main.rs
web/: .babelrc  .env.example  bun.lockb  composer.json  docker-compose.yml  package-lock.json  package.json  pint.json  tailwind.config.js
web/app/: helpers.php
web/app/Events/: PipelineJobFinished.php  PipelineJobReserved.php  PipelineJobStarted.php
web/app/Highlighter/: CargoLanguage.php  ConsoleTokenTypeEnum.php  FinishedPattern.php  GutterPattern.php  HelpPattern.php  NotePattern.php  WarningPattern.php
web/app/Http/: Kernel.php
web/app/Jobs/: ProcessGithubWebhookJob.php
web/app/Models/: Agent.php  GithubSetting.php  Pipeline.php  PipelineEvent.php  PipelineJob.php  PipelineStep.php  User.php
web/app/Providers/: EventServiceProvider.php  GithubServiceProvider.php
web/app/Webhooks/: GithubSignatureValidator.php
web/config/: app.php  database.php  services.php  webhook-client.php
web/database/factories/: AgentFactory.php  GithubSettingFactory.php  PipelineEventFactory.php  PipelineFactory.php  PipelineJobFactory.php  PipelineStepFactory.php
web/database/migrations/: 2014_10_12_000000_create_users_table.php  2019_12_14_000001_create_personal_access_tokens_table.php  2023_10_28_065724_create_pipelines_table.php  (+5 more)
web/routes/: api.php  web.php
(+45 files in other folders)
