[package]
name = "bilbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
console = "0.15.7"
hostname = "0.3.1"
indicatif = { version = "0.17.7", features = ["tokio"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full", "tracing"] }
