[package]
name = "bilbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.37", features = ["serde"] }
console = "0.15.8"
dialoguer = "0.11.0"
hostname = "0.4.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
